today commit